--- a/echoserver-canary.yaml
+++ b/echoserver-canary.yaml
@@ -18,3 +18,17 @@ spec:
         name: echoserver-canary
         ports:
         - containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: echoserver2-canary
+spec:
+  ports:
+    - port: 80
+      targetPort: 8080
+      protocol: TCP
+  type: NodePort
+  selector:
+    app: echoserver-canary
+  
