--- a/echoserver.yaml
+++ b/echoserver.yaml
@@ -18,3 +18,17 @@ spec:
         name: echoserver
         ports:
         - containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: echoserver
+spec:
+  ports:
+    - port: 80
+      targetPort: 8080
+      protocol: TCP
+  type: NodePort
+  selector:
+    app: echoserver
+  
